deploy/k8s/ingress.yaml
# Public entrypoint managed by AWS Load Balancer Controller.
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: chatbot-backend
  namespace: chatbot

  annotations:
    kubernetes.io/ingress.class: alb

    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'

    alb.ingress.kubernetes.io/ssl-redirect: '443'

    ######################################################################
    # IMPORTANT:
    #
    # Replace with real ACM certificate ARN.
    ######################################################################
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:ap-south-1:590183864134:certificate/2d0e4b89-edc4-4c8f-a7d9-1f630e05e16e"

    alb.ingress.kubernetes.io/healthcheck-path: /health

    ######################################################################
    # Socket.IO / WebSocket optimization.
    #
    # ALB defaults to 60 seconds.
    # Longer timeout reduces unnecessary disconnects.
    ######################################################################
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=300

spec:
  rules:
    - host: api.queriesresolve.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chatbot-backend
                port:
                  number: 80
